--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: #465c88;
+$secondary-color: #d7dd35;
 $show-home-image: true;
 $home-image: url(../img/bg2.jpg);
 $bg-opacity: 0.5;
