--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,5 +1,8 @@
 // WideScreen
 @include mediaXl {
+  .projects {
+    //grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 // NormalScreen
@@ -45,6 +48,16 @@
       height: 140px;
     }
   }
+
+  .about-info {
+    grid-template-areas: "bioimage" "bio" "job1" "job2" "job3";
+
+    grid-template-columns: 1fr;
+  }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 // SmallScreen
@@ -52,5 +65,8 @@
   main#home h1 {
     margin-top: 10vh;
     font-size: 4rem;
+  }
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
