--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -3,6 +3,10 @@
   .projects {
     //grid-template-columns: repeat(4, 1fr);
   }
+  .bio-text {
+    font-size: 18px;
+    font-weight: 400;
+  }
 }
 
 // NormalScreen
