--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,6 +15,10 @@ body {
   line-height: 1.5;
 }
 
+li {
+  list-style-type: none;
+}
+
 h1,
 h2,
 h3 {
@@ -29,6 +33,20 @@ h3 {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
     background: rgba(lighten($primary-color, 2), 0.5);
+
+    .typewrite {
+      font-weight: 600;
+      text-shadow: 1px 1px $secondary-color;
+      color: darken(#fff, 10);
+    }
+  }
+
+  &.about-words-heading {
+    //width: 90%;
+    font-size: 20px;
+    font-family: cursive;
+    color: #adadad;
+    background: rgba(lighten($primary-color, 2), 0.9);
   }
 }
 
@@ -50,7 +68,7 @@ header {
 main {
   padding: 4rem;
   //height: 100%;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - 50px);
 
   .icons {
     margin-top: 1rem;
@@ -66,9 +84,18 @@ main {
   }
 
   &#home {
+    margin: auto;
+    text-align: center;
+    width: 80%;
     overflow: hidden;
     h1 {
       margin-top: 20vh;
+    }
+  }
+
+  &#about {
+    h3 {
+      color: $secondary-color;
     }
   }
 }
@@ -84,17 +111,122 @@ main {
   grid-template-areas: "bioimage bio bio" "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
 
+  .bio-image {
+    object-fit: contain;
+    margin: auto;
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
+    grid-area: bioimage;
+    font-size: 1rem;
+  }
+
   .bio {
     grid-area: bio;
     font-size: 1rem;
+
+    padding: 1em;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+
+    box-shadow: 0 20px rgba(93, 64, 55, 0.1), 0 25px rgba(93, 64, 55, 0.05),
+      -5px 5px 40px rgba(100, 0, 0, 0.4);
+    /* At the bottom of our background stack,
+     let's have a misty grey solid color */
+    background-color: lighten($primary-color, 2);
+
+    position: relative;
+
+    &:before,
+    &:after {
+      z-index: -1;
+      position: absolute;
+      content: "";
+      bottom: 15px;
+      left: 10px;
+      width: 50%;
+      top: 80%;
+      max-width: 300px;
+      background: $secondary-color;
+      -webkit-box-shadow: 0 15px 10px $secondary-color;
+      -moz-box-shadow: 0 15px 10px $secondary-color;
+      box-shadow: 0 15px 10px $secondary-color;
+      -webkit-transform: rotate(-3deg);
+      -moz-transform: rotate(-3deg);
+      -o-transform: rotate(-3deg);
+      -ms-transform: rotate(-3deg);
+      transform: rotate(-3deg);
+    }
+
+    &:after {
+      -webkit-transform: rotate(3deg);
+      -moz-transform: rotate(3deg);
+      -o-transform: rotate(3deg);
+      -ms-transform: rotate(3deg);
+      transform: rotate(3deg);
+      right: 10px;
+      left: auto;
+    }
+    /* We stack linear gradients on top of each
+     other to create our color strip effect.
+     As you will notice, color gradients are
+     considered to be images and can be
+     manipulated as such */
+    /*
+      background-image: linear-gradient(175deg, rgba(0, 0, 0, 0) 95%, #8da389 95%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 95%, #8da389 95%),
+      linear-gradient(175deg, rgba(0, 0, 0, 0) 90%, #b4b07f 90%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 92%, #b4b07f 92%),
+      linear-gradient(175deg, rgba(0, 0, 0, 0) 85%, #c5a68e 85%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 89%, #c5a68e 89%),
+      linear-gradient(175deg, rgba(0, 0, 0, 0) 80%, #ba9499 80%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 86%, #ba9499 86%),
+      linear-gradient(175deg, rgba(0, 0, 0, 0) 75%, #9f8fa4 75%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 83%, #9f8fa4 83%),
+      linear-gradient(175deg, rgba(0, 0, 0, 0) 70%, #74a6ae 70%),
+      linear-gradient(85deg, rgba(0, 0, 0, 0) 80%, #74a6ae 80%);
+    */
+    .bio-text {
+      //margin: 0;
+      text-align: left;
+    }
   }
 
   .job-1 {
     grid-area: job1;
+
+    .job1-text {
+      text-align: left;
+      margin-top: 10px;
+
+      li {
+        font-size: 15px;
+        color: #d8d1d1;
+      }
+    }
   }
 
   .job-2 {
     grid-area: job2;
+    text-align: left;
+
+    p {
+      margin-top: 5px;
+    }
+
+    li {
+      font-size: 15px;
+      color: #d8d1d1;
+    }
+
+    .link-in-job2 {
+      color: $secondary-color;
+      font-size: 18px;
+      font-weight: 500;
+      text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.2);
+    }
   }
 
   .job-3 {
@@ -127,6 +259,32 @@ main {
   }
 }
 
+// Contact Page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #fff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
 .btn {
   display: block;
   padding: 0.5rem 1rem;
@@ -149,14 +307,14 @@ main {
 }
 
 #main-footer {
-  position: fixed;
+  //position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
   padding: 1rem;
   background: darken($primary-color, 10);
   color: set-text-color($primary-color);
-  height: 60px;
+  height: 50px;
 }
 
 @import "mobile";
