--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,6 +11,13 @@
 
 // NormalScreen
 @include mediaLg {
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+
+    .overlay {
+      overflow: hidden;
+    }
+  }
 }
 
 // MediumScreen
@@ -61,6 +68,13 @@
 
   .projects {
     grid-template-columns: repeat(2, 1fr);
+
+    .overlay {
+      overflow: hidden;
+    }
+    .wrappedtext {
+      font-size: 12px;
+    }
   }
 }
 
@@ -72,5 +86,8 @@
   }
   .projects {
     grid-template-columns: repeat(1, 1fr);
+    .wrappedtext {
+      font-size: 16px;
+    }
   }
 }
