change file dir to see if it can be published this way

--- a/css/main.css
+++ b/css/main.css
@@ -295,7 +295,7 @@ main {
     .about-info .job-3 li {
       font-size: 15px;
       color: #d8d1d1; }
-    .about-info .job-3 .link-in-job {
+    .about-info .job-3 .link-in-job3 {
       color: #dcae1d;
       font-size: 18px;
       font-weight: 500;
