--- a/scss/main.scss
+++ b/scss/main.scss
@@ -242,7 +242,7 @@ main {
       color: #d8d1d1;
     }
 
-    .link-in-job {
+    .link-in-job3 {
       color: $secondary-color;
       font-size: 18px;
       font-weight: 500;
